preparation work for new release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+fido2ble (0.2) UNRELEASED; urgency=medium
+
+  * Updates all over the place.
+
+ -- Jó Ágila Bitsch <jo.bitsch@gmail.com>  Fri, 4 Apr 2025 14:31:55 +0200
+
+
 fido2ble (0.1) UNRELEASED; urgency=medium
 
   * Initial release.
